fix: fonts too small

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,14 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Emoji:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html,
 body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif, 'Noto Emoji';
+  font-family: 'Poppins' sans-serif, ;
     color: white;
-    letter-spacing: -0.025em;
 }
 
 a {
